Fixing z-index issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12480,6 +12480,9 @@ label.custom-amount {
 .number {
   font-family: Montserrat,Helvetica,Arial,sans-serif; }
 
+.modal {
+  z-index: 999999999999 !important; }
+
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url("http://cruglobal.github.io/Give_Front-end/fonts/bootstrap/glyphicons-halflings-regular.eot");
