--- a/assets/scss/_gift-config.scss
+++ b/assets/scss/_gift-config.scss
@@ -150,3 +150,5 @@ transition-delay: 100ms;
 
 
     .number{font-family: Montserrat,Helvetica,Arial,sans-serif;}
+
+    .modal{z-index: 999999999999 !important}
